@@ -16,16 +16,26 @@
  */
 package org.apache.nifi.registry.cluster;
 
+import org.apache.http.client.config.RequestConfig;
+import org.apache.http.client.methods.CloseableHttpResponse;
+import org.apache.http.client.methods.HttpEntityEnclosingRequestBase;
+import org.apache.http.client.methods.HttpRequestBase;
+import org.apache.http.entity.ByteArrayEntity;
+import org.apache.http.impl.client.CloseableHttpClient;
+import org.apache.http.impl.client.HttpClients;
+import org.apache.http.util.EntityUtils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.DisposableBean;
 
+import java.io.IOException;
+import java.io.InterruptedIOException;
 import java.net.URI;
-import java.net.http.HttpClient;
-import java.net.http.HttpRequest;
-import java.net.http.HttpResponse;
-import java.time.Duration;
+import java.util.Arrays;
+import java.util.Collections;
+import java.util.HashSet;
 import java.util.List;
+import java.util.Locale;
 import java.util.Map;
 import java.util.Set;
 import java.util.concurrent.ExecutorService;
@@ -33,10 +43,9 @@ import java.util.concurrent.Executors;
 import java.util.concurrent.TimeUnit;
 
 /**
- * {@link ReplicationClient} backed by the JDK {@link HttpClient} (JDK 11+).
+ * {@link ReplicationClient} backed by Apache {@link CloseableHttpClient} (JDK 8 compatible).
  *
- * <p>No additional Maven dependency is required. A single shared
- * {@link HttpClient} instance is used for all requests; it is thread-safe
+ * <p>A single shared {@link CloseableHttpClient} instance is used for all requests; it is thread-safe
  * and manages its own connection pool.
  *
  * <p>Fan-out to followers is performed on a cached-thread-pool executor so
@@ -56,10 +65,12 @@ public class HttpReplicationClient implements ReplicationClient, DisposableBean 
     /** Shared-secret header verifying that a replicated request comes from the leader. */
     public static final String INTERNAL_AUTH_HEADER = "X-Registry-Internal-Auth";
 
-    private static final Set<String> HOP_BY_HOP = Set.of(
-            "connection", "keep-alive", "transfer-encoding", "te",
-            "trailers", "upgrade", "proxy-authorization", "proxy-authenticate",
-            "content-length"   // HttpClient sets this from the body publisher
+    private static final Set<String> HOP_BY_HOP = Collections.unmodifiableSet(
+            new HashSet<>(Arrays.asList(
+                    "connection", "keep-alive", "transfer-encoding", "te",
+                    "trailers", "upgrade", "proxy-authorization", "proxy-authenticate",
+                    "content-length"
+            ))
     );
 
     /**
@@ -73,24 +84,27 @@ public class HttpReplicationClient implements ReplicationClient, DisposableBean 
      * <p>{@code origin} — A forwarded Origin header would trigger CORS processing on the
      * follower against the wrong request context.
      */
-    private static final Set<String> SESSION_HEADERS = Set.of("cookie", "origin");
+    private static final Set<String> SESSION_HEADERS = Collections.unmodifiableSet(
+            new HashSet<>(Arrays.asList("cookie", "origin"))
+    );
 
-    private static final Duration CONNECT_TIMEOUT = Duration.ofSeconds(5);
-    private static final Duration REQUEST_TIMEOUT = Duration.ofSeconds(30);
+    private static final int CONNECT_TIMEOUT_MILLIS = (int) TimeUnit.SECONDS.toMillis(5);
+    private static final int REQUEST_TIMEOUT_MILLIS = (int) TimeUnit.SECONDS.toMillis(30);
 
     private final String authToken;
-    private final HttpClient httpClient;
+    private final CloseableHttpClient httpClient;
     private final ExecutorService fanOutExecutor;
 
     public HttpReplicationClient(final String authToken) {
         this.authToken = authToken;
-        this.httpClient = HttpClient.newBuilder()
-                .connectTimeout(CONNECT_TIMEOUT)
-                .executor(Executors.newCachedThreadPool(r -> {
-                    final Thread t = new Thread(r, "registry-replication-http");
-                    t.setDaemon(true);
-                    return t;
-                }))
+        final RequestConfig requestConfig = RequestConfig.custom()
+                .setConnectTimeout(CONNECT_TIMEOUT_MILLIS)
+                .setConnectionRequestTimeout(REQUEST_TIMEOUT_MILLIS)
+                .setSocketTimeout(REQUEST_TIMEOUT_MILLIS)
+                .build();
+
+        this.httpClient = HttpClients.custom()
+                .setDefaultRequestConfig(requestConfig)
                 .build();
         this.fanOutExecutor = Executors.newCachedThreadPool(r -> {
             final Thread t = new Thread(r, "registry-fanout");
@@ -102,6 +116,12 @@ public class HttpReplicationClient implements ReplicationClient, DisposableBean 
     @Override
     public void destroy() {
         fanOutExecutor.shutdown();
+        try {
+            httpClient.close();
+        } catch (final IOException e) {
+            LOGGER.debug("Error closing replication HTTP client", e);
+        }
+
         try {
             if (!fanOutExecutor.awaitTermination(5, TimeUnit.SECONDS)) {
                 fanOutExecutor.shutdownNow();
@@ -135,46 +155,45 @@ public class HttpReplicationClient implements ReplicationClient, DisposableBean 
         LOGGER.debug("Replicating {} {} to follower '{}'.", method, path, follower.getNodeId());
 
         try {
-            final HttpRequest.Builder builder = HttpRequest.newBuilder()
-                    .uri(URI.create(url))
-                    .method(method, bodyPublisher(body))
-                    .timeout(REQUEST_TIMEOUT)
-                    .header(REPLICATION_HEADER, "true")
-                    .header(INTERNAL_AUTH_HEADER, authToken);
+            final HttpRequestBase request = createRequest(method, url, body);
+            request.addHeader(REPLICATION_HEADER, "true");
+            request.addHeader(INTERNAL_AUTH_HEADER, authToken);
 
             headers.forEach((name, value) -> {
-                final String lower = name.toLowerCase();
+                final String lower = name.toLowerCase(Locale.ROOT);
                 if (!HOP_BY_HOP.contains(lower)
                         && !SESSION_HEADERS.contains(lower)
                         && !REPLICATION_HEADER.equalsIgnoreCase(name)
                         && !INTERNAL_AUTH_HEADER.equalsIgnoreCase(name)) {
                     try {
-                        builder.header(name, value);
+                        request.addHeader(name, value);
                     } catch (final IllegalArgumentException e) {
                         // Skip restricted headers (e.g. host).
                     }
                 }
             });
 
-            final HttpResponse<Void> response =
-                    httpClient.send(builder.build(), HttpResponse.BodyHandlers.discarding());
+            try (CloseableHttpResponse response = httpClient.execute(request)) {
+                final int statusCode = response.getStatusLine().getStatusCode();
+                EntityUtils.consumeQuietly(response.getEntity());
 
-            if (response.statusCode() >= 400) {
-                // 404 on DELETE is idempotent (resource already absent on follower); log at DEBUG.
-                // All other 4xx/5xx responses indicate a genuine replication failure.
-                if (response.statusCode() == 404 && "DELETE".equalsIgnoreCase(method)) {
-                    LOGGER.debug("Replication to follower '{}' for DELETE {} returned HTTP 404 — " +
-                            "resource was already absent on follower (idempotent).", follower.getNodeId(), path);
+                if (statusCode >= 400) {
+                    // 404 on DELETE is idempotent (resource already absent on follower); log at DEBUG.
+                    // All other 4xx/5xx responses indicate a genuine replication failure.
+                    if (statusCode == 404 && "DELETE".equalsIgnoreCase(method)) {
+                        LOGGER.debug("Replication to follower '{}' for DELETE {} returned HTTP 404 - " +
+                                "resource was already absent on follower (idempotent).", follower.getNodeId(), path);
+                    } else {
+                        LOGGER.warn("Replication to follower '{}' for {} {} returned HTTP {}. " +
+                                        "Check follower logs for rejection reason (CSRF/auth/authorization).",
+                                follower.getNodeId(), method, path, statusCode);
+                    }
                 } else {
-                    LOGGER.warn("Replication to follower '{}' for {} {} returned HTTP {}. " +
-                                    "Check follower logs for rejection reason (CSRF/auth/authorization).",
-                            follower.getNodeId(), method, path, response.statusCode());
+                    LOGGER.debug("Replicated {} {} to follower '{}': HTTP {}.",
+                            method, path, follower.getNodeId(), statusCode);
                 }
-            } else {
-                LOGGER.debug("Replicated {} {} to follower '{}': HTTP {}.",
-                        method, path, follower.getNodeId(), response.statusCode());
             }
-        } catch (final InterruptedException e) {
+        } catch (final InterruptedIOException e) {
             Thread.currentThread().interrupt();
             LOGGER.warn("Interrupted replicating {} {} to follower '{}'.", method, path, follower.getNodeId());
         } catch (final Exception e) {
@@ -195,10 +214,27 @@ public class HttpReplicationClient implements ReplicationClient, DisposableBean 
         return sb.toString();
     }
 
-    private static HttpRequest.BodyPublisher bodyPublisher(final byte[] body) {
-        return (body != null && body.length > 0)
-                ? HttpRequest.BodyPublishers.ofByteArray(body)
-                : HttpRequest.BodyPublishers.noBody();
+    private static HttpRequestBase createRequest(final String method, final String url, final byte[] body) {
+        if (body != null && body.length > 0) {
+            final HttpEntityEnclosingRequestBase request = new HttpEntityEnclosingRequestBase() {
+                @Override
+                public String getMethod() {
+                    return method;
+                }
+            };
+            request.setURI(URI.create(url));
+            request.setEntity(new ByteArrayEntity(body));
+            return request;
+        }
+
+        final HttpRequestBase request = new HttpRequestBase() {
+            @Override
+            public String getMethod() {
+                return method;
+            }
+        };
+        request.setURI(URI.create(url));
+        return request;
     }
 
 }
